# docling-skill

./: .gitignore  README.md  README.zh-CN.md  SKILL.md  UPSTREAM_GAPS.md  pyproject.toml
.github/workflows/: ci.yml
.state/: progress.md
agents/: openai.yaml
src/docling_skill/: __init__.py  artifacts.py  cli.py  constants.py  core.py  manifest.py  models.py  ocr.py  quality.py  routing.py  spreadsheet.py  text_normalization.py
tests/: test_format_routing.py  test_package_api.py  test_quality_benchmark.py  test_quality_contract.py  test_text_native_quality.py  test_text_normalization.py
