[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docling-skill"
version = "0.1.0"
description = "Agent-oriented sidecar extraction on top of Docling."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Rael" },
]
dependencies = [
  "docling>=2.84.0,<2.85.0",
  "docling-core>=2.70.0,<3.0.0",
]

[project.optional-dependencies]
proxy = ["socksio>=1.0.0"]

[project.scripts]
docling-skill = "docling_skill.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
