[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docling-skill"
version = "1.2.0"
description = "Agent-oriented sidecar extraction on top of Docling."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Rael" },
]
dependencies = [
  "docling>=2.96.0,<2.97.0",
  "docling-core>=2.77.1,<3.0.0",
  "openpyxl>=3.1.5,<4.0.0",
  "xlrd>=2.0.1,<3.0.0",
]

[project.optional-dependencies]
proxy = ["socksio>=1.0.0"]
dev = ["ruff>=0.8,<1.0"]

[project.scripts]
docling-skill = "docling_skill.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
